Improved about_us & portfolio page

--- a/web_sakurafari/templates/about-us.html
+++ b/web_sakurafari/templates/about-us.html
@@ -102,7 +102,7 @@
                                 <p>Founded in September 2024 in Cameroon and headquartered in Yaoundé-Cameroon, SAKURAFARI envisions becoming the premier gateway for any cutting-edge Japanese technologies into the Central African market, with Cameroon as the pivotal entry point. Our mission is to identify, adapt, and integrate innovative solutions from diverse sectors in Japan that promise transformative impact and sustainable growth for the region. At SAKURAFARI, we are committed to bridging the gap between Japan’s technological excellence and Central Africa’s growing potential, fostering a future of progress and collaboration. </p>
                             </div>
                             <div class="c_video">
-                                <a class="popup-youtube" href="https://www.youtube.com/watch?v=62QYQE6k7tg"><img src="{% static 'web_sakurafari/img/icon/video-icon.png' %}"  alt="">See how we work </a>
+                                <a class="popup-youtube" href=" "><img src="{% static 'web_sakurafari/img/icon/video-icon.png' %}"  alt="">See how we work </a>
                             </div>
                         </div>
                     </div>
@@ -122,30 +122,34 @@
                 <div class="testimonials_slider owl-carousel">
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“Simply professionals”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>Building Bridges, Fueling Progress</h3>
+                            <div class="justified-text">
+                            <p>At SAKURAFARI, we are more than a tech gateway—we are a catalyst for regional transformation. By connecting Japan’s cutting-edge innovations with Central Africa’s growing potential, we unlock pathways for inclusive growth, sustainable impact, and shared prosperity.</p>
+                            </div>
                             <div class="media">
                                 <div class="d-flex">
                                     <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
                                 </div>
                                 <div class="media-body">
-                                    <h4>MDs</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Freddy ABEME</h4>
+                                    <h5>Founder & CEO</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“They are the best”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>Turning Innovation into Connection</h3>
+                            <div class="justified-text">
+                            <p>Marketing at SAKURAFARI means more than promotion—it’s about storytelling that connects people to purpose. We build trust, inspire adoption, and bring the voice of innovation to every corner of the Central African market.</p>
+                            </div>
                             <div class="media">
                                 <div class="d-flex">
                                     <img class="rounded-circle" src="img/testimonials/testi-2.jpg" alt="">
                                 </div>
                                 <div class="media-body">
-                                    <h4>Chriss Turner</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Murielle MEMPOURI</h4>
+                                    <h5>Marketing Lead</h5>
                                 </div>
                             </div>
                         </div>
@@ -167,15 +171,17 @@
                     </div>
                     <div class="item">
                         <div class="testi_item">
-                            <h3>“Simply professionals”</h3>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus.</p>
+                            <h3>Powering Possibilities, Sustainably</h3>
+                            <div class="justified-text">
+                            <p>Our mission is to bring smart, clean, and scalable energy solutions to the heart of Africa. We tailor Japan’s most reliable technologies—like solar and biogas—to meet real local needs, empowering communities and industries to thrive sustainably.</p>
+                            </div>
                             <div class="media">
                                 <div class="d-flex">
                                     <img class="rounded-circle" src="img/testimonials/testi-1.jpg" alt="">
                                 </div>
                                 <div class="media-body">
-                                    <h4>Maria Smith</h4>
-                                    <h5>CEO Enterprise</h5>
+                                    <h4>Cydric MENGUE</h4>
+                                    <h5>Technical Officer Lead</h5>
                                 </div>
                             </div>
                         </div>
@@ -193,18 +199,30 @@
                         <div class="left_company_text">
                             <div class="l_title">
                                 <img src="{% static 'web_sakurafari/img/icon/title-icon.png' %}"  alt="">
-                                <h6>Discover the features</h6>
-                                <h2>We are a <span>Gibraltar</span> based Company</h2>
+                                <h6>Our Capabilities</h6>
+                                <h2>We are a <span>Cameroon-based</span> Technology Transfert Gateway</h2>
                             </div>
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul.Cras ex mauris, ornare eget pretium sit amet, dignissim et turpis. Nunc nec maximus dui, vel suscipit dolor. Donec elementum velit a orci facilisis rutrum. Nam convallis vel erat id dictum. Sed ut risus in orci convallis viverra a eget nisi. Aenean pellentesque elit vitae eros dignissim ultrices. </p>
+                            <div class="justified-text">
+                            <p>At SAKURAFARI, we specialize in connecting Japan’s cutting-edge technologies with Central Africa’s untapped potential. Headquartered in Yaoundé, Cameroon, we empower communities and businesses through strategic processes. Our agile approach—scouting, piloting, adapting, and scaling—ensures every solution delivers real value and sustainable impact across the region. </p>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="company_skill">
-                            <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellente sque sit am et tellus blandit. Etiam nec odio vestibul.</p>
+                            <div class="justified-text">
+                            <p>Our team combines technical depth, market insight, and operational excellence to turn vision into value. Here's what sets us apart:</p>
+                            </div>
                             <div class="our_skill_inner">
                                 <div class="single_skill">
-                                    <h3>Development</h3>
+                                    <h3>Technology Scouting</h3>
+                                    <div class="progress" data-value="90">
+                                        <div class="progress-bar">
+                                            <div class="progress_parcent"><span class="counter">90</span>%</div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="single_skill">
+                                    <h3>Localization & Adaptation</h3>
                                     <div class="progress" data-value="70">
                                         <div class="progress-bar">
                                             <div class="progress_parcent"><span class="counter">70</span>%</div>
@@ -212,15 +230,7 @@
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Design</h3>
-                                    <div class="progress" data-value="90">
-                                        <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">90</span>%</div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="single_skill">
-                                    <h3>SEO</h3>
+                                    <h3>Market Strategy</h3>
                                     <div class="progress" data-value="85">
                                         <div class="progress-bar">
                                             <div class="progress_parcent"><span class="counter">85</span>%</div>
@@ -228,18 +238,18 @@
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Development</h3>
-                                    <div class="progress" data-value="90">
+                                    <h3>Capacity Building</h3>
+                                    <div class="progress" data-value="95">
                                         <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">90</span>%</div>
+                                            <div class="progress_parcent"><span class="counter">95</span>%</div>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="single_skill">
-                                    <h3>Management</h3>
-                                    <div class="progress" data-value="75">
+                                    <h3>Partnership Management</h3>
+                                    <div class="progress" data-value="80">
                                         <div class="progress-bar">
-                                            <div class="progress_parcent"><span class="counter">75</span>%</div>
+                                            <div class="progress_parcent"><span class="counter">80</span>%</div>
                                         </div>
                                     </div>
                                 </div>
