--- a/web_sakurafari/templates/portfolio.html
+++ b/web_sakurafari/templates/portfolio.html
@@ -88,28 +88,28 @@
                 <div class="portfolio_filter">
                     <ul>
                         <li class="active" data-filter="*"><a href="#">All</a></li>
-                        <li data-filter=".brand"><a href="#">Brand identity</a></li>
-                        <li data-filter=".design"><a href="#">Design</a></li>
-                        <li data-filter=".arc"><a href="#">Architecture</a></li>
-                        <li data-filter=".photo"><a href="#">Photography</a></li>
+                        <li data-filter=".brand"><a href="#">Technology Scouting</a></li>
+                        <li data-filter=".design"><a href="#">Agricultural Pilot Project</a></li>
+                        <li data-filter=".arc"><a href="#">Renewable Energy Market Research </a></li>
+                        <li data-filter=".photo"><a href="#">Training & Capacity Building</a></li>
                     </ul>
                 </div>
             </div>
             <div class="ms_portfolio_inner">
                 <div class="ms_p_item wd_25 brand arc photo">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-1.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/T8_1.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_25 brand arc photo">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-2.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/T8_2.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_50 brand">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-3.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/T8_3.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_25 brand arc photo">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-4.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/SW_1.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_25 brand arc photo">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-5.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/SW_2.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_50">
                     <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-6.jpg' %}"  alt="">
