Improved the Blog page

--- a/web_sakurafari/templates/blog.html
+++ b/web_sakurafari/templates/blog.html
@@ -99,17 +99,16 @@
                                 <div class="blog_img">
                                     <img class="img-fluid" src="img/blog/blog-1.jpg" alt="">
                                     <div class="blog_date">
-                                        <h4>29</h4>
-                                        <h5>October, 2017</h5>
+                                        <h4>19</h4>
+                                        <h5>December, 2024</h5>
                                     </div>
                                 </div>
                                 <div class="blog_text">
-                                    <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
-                                        <a href="#">By Lore Papp-Dinea</a>
-                                        <a href="#">Design</a>
+                                    <a href="#"><h4 style="margin-left: 100px;">TOKYO8 Organic Fertilizer Pilot Kicks off in Cameroon</h4></a>
+                                    <br/><br/>
+                                    <div class="justified-text">
+                                    <p>Recognizing the untapped potential of sustainable agriculture in Cameroon, SAKURAFARI identified TOKYO8 to introduce its organic bio-fertilizer to local farming systems. Following enthusiastic reception during the 2024 Cameroon-Japan Business Fair, the interest quickly transitioned from conversation to implementation. Since December 2024, field trials have begun revealing the fertilizer’s powerful regenerative effects on soil health—positioning TOKYO8 as a game changer for the country’s agro-ecological transformation.</p>
                                     </div>
-                                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
                                     <a class="more_btn" href="#">Read More</a>
                                 </div>
                             </div>
@@ -117,38 +116,20 @@
                                 <div class="blog_img">
                                     <img class="img-fluid" src="img/blog/blog-2.jpg" alt="">
                                     <div class="blog_date">
-                                        <h4>29</h4>
-                                        <h5>October, 2017</h5>
+                                        <h4>15</h4>
+                                        <h5>April, 2025</h5>
                                     </div>
                                 </div>
                                 <div class="blog_text">
-                                    <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
-                                        <a href="#">By Lore Papp-Dinea</a>
-                                        <a href="#">Design</a>
+                                    <a href="#"><h4 style="margin-left: 100px;">Portable Solar Power Stations Market Validation in Cameroon</h4></a>
+                                    <br/><br/>
+                                    <div class="justified-text">
+                                    <p>In a nation where less than 1% of off-grid energy solutions are currently deployed, SAKURAFARI identified Solar World's portable power stations as a breakthrough opportunity for small and medium-sized enterprises grappling with energy insecurity. Acting swiftly, SAKURAFARI formalized a strategic MoU with Solar World and launched a field validation program in early 2025. The systems are now being tested across few shops in Douala in Cameroon—bringing clean, reliable power to the forefront of the local energy revolution.</p>
                                     </div>
-                                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
                                     <a class="more_btn" href="#">Read More</a>
                                 </div>
                             </div>
-                            <div class="blog_main_item">
-                                <div class="blog_img">
-                                    <img class="img-fluid" src="img/blog/blog-3.jpg" alt="">
-                                    <div class="blog_date">
-                                        <h4>29</h4>
-                                        <h5>October, 2017</h5>
-                                    </div>
-                                </div>
-                                <div class="blog_text">
-                                    <a href="#"><h4>Let us introduce you the best apps</h4></a>
-                                    <div class="blog_author">
-                                        <a href="#">By Lore Papp-Dinea</a>
-                                        <a href="#">Design</a>
-                                    </div>
-                                    <p>Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. Etiam nec odio vestibulum est mattis effic iturut magna. Pellentesque sit am et tellus blandit. Etiam nec odio vestibul. </p>
-                                    <a class="more_btn" href="#">Read More</a>
-                                </div>
-                            </div>
+                            
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -166,77 +147,30 @@
                                     <h3>Categories</h3>
                                 </div>
                                 <ul>
-                                    <li><a href="#">Vestibulum maximus</a></li>
-                                    <li><a href="#">Nisi eu lobortis pharetra</a></li>
-                                    <li><a href="#">Orci quam accumsan</a></li>
-                                    <li><a href="#">Auguen pharetra massa</a></li>
-                                    <li><a href="#">Tellus ut nulla</a></li>
-                                    <li><a href="#"> Etiam egestas viverra </a></li>
+                                    <li><a href="#">Organic Fertilizer</a></li>
+                                    <li><a href="#">Off-grid Energy</a></li>
+                                    <li><a href="#">E-waste</a></li>
+                                    <li><a href="#">Fintech</a></li>
+                                    <li><a href="#">General Commerce</a></li>
+                                    <li><a href="#">BIOGAS Energy</a></li>
                                 </ul>
                             </aside>
-                            <aside class="r_widget insta_widget">
-                                <div class="r_w_title">
-                                    <h3>Instagram</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-1.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-2.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-3.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-4.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-5.jpg" alt="">
-                                    </a></li>
-                                    <li><a href="https://www.instagram.com/?hl=en">
-                                        <img class="img-fluid" src="img/instagram/right-instagram/r-in-6.jpg" alt="">
-                                    </a></li>
-                                </ul>
-                            </aside>
-                            <aside class="r_widget tag_widget">
-                                <div class="r_w_title">
-                                    <h3>Tags</h3>
-                                </div>
-                                <ul>
-                                    <li><a href="#">branding</a></li>
-                                    <li><a href="#">identity</a></li>
-                                    <li><a href="#">design</a></li>
-                                    <li><a href="#">inspiration</a></li>
-                                    <li><a href="#">web design</a></li>
-                                    <li><a href="#">video</a></li>
-                                    <li><a href="#">photography</a></li>
-                                </ul>
-                            </aside>
+                            
+                            <br/><br/>
+                            <br/><br/>
+                            <br/><br/>
                             <aside class="r_widget quote_widget">
                                 <div class="r_w_title">
                                     <h3>Quote</h3>
                                 </div>
                                 <img src="{% static 'web_sakurafari/img/icon/quote-icon.png' %}"  alt="">
-                                <p>Vivamus in urna eu enim porttitor consequat. Proin vitae pulvinar libero. Proin ut hendrerit metus. Aliquam erat volut pat. Donec fermen tum convallis.</p>
+                                <p>We don't just introduce innovation. We localize it, validate it, and empower businesses and consumers to thrive with it.</p>
                             </aside>
-                            <aside class="r_widget add_widget">
-                                <div class="r_w_title">
-                                    <h3>Add</h3>
-                                </div>
-                                <img class="img-fluid" src="img/add.jpg" alt="">
-                            </aside>
+
                         </div>
                     </div>
                 </div>
-                <nav aria-label="Page navigation example" class="pagination_area">
-                    <ul class="pagination">
-                        <li class="page-item active"><a class="page-link" href="#">01.</a></li>
-                        <li class="page-item"><a class="page-link" href="#">02.</a></li>
-                        <li class="page-item"><a class="page-link" href="#">03.</a></li>
-                        <li class="page-item"><a class="page-link" href="#">04.</a></li>
-                    </ul>
-                </nav>
+
             </div>
         </section>
         <!--================End Blog Main Area =================-->
@@ -252,13 +186,7 @@
                                 <p class="justified-text">At SAKURAFARI, we bridge the gap between Japan’s cutting-edge technology and Central Africa’s emerging opportunities. With Cameroon as the strategic entry point, we identify, adapt, and integrate transformative innovations that drive sustainable growth.</p>
                             </aside>
                         </div>
-                        <div class="col-lg-4 col-sm-6">
-                            <aside class="f_widget f_insta_widget">
-                                <div class="f_title">
-                                    <h3>Instagram</h3>
-                                </div>
-                            </aside>
-                        </div>
+
                         <div class="col-lg-4 col-sm-6">
                             <aside class="f_widget f_subs_widget">
                                 <div class="f_title">
