--- a/web_sakurafari/templates/portfolio.html
+++ b/web_sakurafari/templates/portfolio.html
@@ -112,10 +112,10 @@
                     <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/SW_2.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_50">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-6.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/SW_3.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_25 design arc">
-                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-7.jpg' %}"  alt="">
+                    <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/SW_4.jpeg' %}"  alt="">
                 </div>
                 <div class="ms_p_item wd_25 design arc">
                     <img src="{% static 'web_sakurafari/img/portfolio/ms-portfolio/ms-p-8.jpg' %}"  alt="">
